basic styling with CSS

--- a/index.html
+++ b/index.html
@@ -4,14 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./Assets/styles.css">
     <title>Tarot Card of the Day</title>
 </head>
 <body>
     <h1>Tarot Card of the Day</h1>
     <h2>Pick a Card</h2>
+    <div>
     <img src="./Assets/tarot-cards/1-the-magician.jpg" alt="The Magician Card" />
+    </div>
     <h3>Close your eyes and breathe deep</h3>
     <button>Pick a Card</button>
     
 </body>
 </html>
+
+<!--TODO -
+1. Style with basic CSS
+2. enable button 
+    a. shuffle
+    b. pick one Card
+    c. present Card
+        i. check out war game mechanic and card match mechanics for this functionality
+3. create CSS animation for cards flashing through deck -->
