styled button and image

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Tarot Card of the Day</h1>
     <h2>Pick a Card</h2>
     <div>
-    <img src="./Assets/tarot-cards/1-the-magician.jpg" alt="The Magician Card" />
+    <img src="./Assets/tarot-cards/1-the-magician.jpg" alt="The Magician Card" class="center" />
     </div>
     <h3>Close your eyes and breathe deep</h3>
     <button>Pick a Card</button>
@@ -23,6 +23,10 @@
 1. Style with basic CSS
 2. enable button 
     a. shuffle
+        i. I have to make the cards to make the deck
+        ii. The cards will include an image, name, index, meaning and personal notes
+        iii. The fisher yates will pull the random index
+        iv. the random index will be pushed into the div with the card
     b. pick one Card
     c. present Card
         i. check out war game mechanic and card match mechanics for this functionality
