--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./Assets/styles.css">
+    <link rel="stylesheet" href="./Assets/index.css">
     <title>Tarot Card of the Day</title>
 </head>
-<body>
-    <h1>Tarot Card of the Day</h1>
-    <h2>Pick a Card</h2>
+<body class="sumptuous-swamp">
+    <h1 class="h1">Tarot Card of the Day</h1>
+    <h2 class="h2">Pick a Card</h2>
     <div>
     <img src="./Assets/tarot-cards/1-the-magician.jpg" alt="The Magician Card" class="center" />
     </div>
-    <h3>Close your eyes and breathe deep</h3>
-    <button>Pick a Card</button>
+    <h3 class="p-text">Close your eyes and breathe deep</h3>
+    <button class="btn primary">Pick a Card</button>
     
 </body>
 </html>
