--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="./Assets/index.css">
     <title>Tarot Card of the Day</title>
 </head>
-<body class="sumptuous-swamp">
+<body>
     <h1 class="h1">Tarot Card of the Day</h1>
     <h2 class="h2">Pick a Card</h2>
     <div>
     <img src="./Assets/tarot-cards/1-the-magician.jpg" alt="The Magician Card" class="center" />
     </div>
     <h3 class="p-text">Close your eyes and breathe deep</h3>
-    <button class="btn primary">Pick a Card</button>
+    <button class="btn hierophant flat">Pick a Card</button>
     
 </body>
 </html>
